--- a/Source/Caracal.Voting.Web/Views/Shared/Error.cshtml
+++ b/Source/Caracal.Voting.Web/Views/Shared/Error.cshtml
@@ -3,3 +3,21 @@
 <div>
 	<h2>An error occurred while processing your request.</h2>
 </div>
+
+<!--
+<div class="row" *ngIf="hasVoted && voteResults.length > 0">
+    <div class=".col-md-12">
+        <div class="panel panel-default">
+            <div class="panel-heading">Voting Result</div>
+            <div class="panel-body">
+                <ul class="list-group">
+                    <li class="list-group-item list-group-item-{{vote.Result}}" *ngFor="let vote of votes">
+                            <span class="badge">{{vote.NumberOfVotes}}</span>
+                            {{vote.Item}}
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </div>
+</div>
+-->
