--- a/Source/Caracal.Voting.Web/Views/Shared/_Layout.cshtml
+++ b/Source/Caracal.Voting.Web/Views/Shared/_Layout.cshtml
@@ -1,36 +1,33 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
+  <base href="/">
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
   <title>Caracal Voting</title>
   <link rel="stylesheet" href="~/Content/site.css" />
   <link rel="stylesheet" href="~/Content/bootstrap.css" />
-  <link rel="stylesheet" href="~/Content/bootstrap-theme.css" />
+  <link rel="stylesheet" href="~/Content/bootstrap-theme.css" /> 
 </head>
 <body>
-<div class="container body-content">
-  @RenderBody()
-  <hr />
-  <footer>
-    <p>&copy; 2016 - Caracal Voting</p>
-  </footer>
-</div>
+      @RenderBody()
+   
+    <environment names="Development">
+        <script src="~/Scripts/jquery-3.1.1.js"></script>
+        <script src="~/Scripts/jquery.signalR-2.2.1.min.js"></script>
+        <script src="~/Scripts/bootstrap.js"></script>
+        <script src="~/node_modules/core-js/client/shim.min.js"></script>
+        <script src="~/node_modules/zone.js/dist/zone.js"></script>
+        <script src="~/node_modules/reflect-metadata/Reflect.js"></script>
+        <script src="~/node_modules/systemjs/dist/system.src.js"></script>
+        <script src="~/systemjs.config.js"></script>
+    </environment>
 
-<environment names="Development">
-    <script src="~/Scripts/jquery-3.1.1.js"></script>
-    <script src="~/Scripts/bootstrap.js"></script>
-    <script src="~/node_modules/core-js/client/shim.min.js"></script>
-    <script src="~/node_modules/zone.js/dist/zone.js"></script>
-    <script src="~/node_modules/reflect-metadata/Reflect.js"></script>
-    <script src="~/node_modules/systemjs/dist/system.src.js"></script>
-    <script src="~/systemjs.config.js"></script>
-</environment>
-    
-<script>
-    System.import('app').catch(function(err){ console.error(err); });
-</script>
-
-@RenderSection("scripts", required: false)
+    @RenderSection("scripts", required: false)
 </body>
 </html>
+
+<script src="systemjs.config.js"></script>
+<script>
+      System.import('app').catch(function(err){ console.error(err); });
+</script>
